# wandlung

./: LICENSE  README.md
api/: .env.template  .gitignore  Dockerfile.ffmpeg  README.md  manage.py  pyproject.toml  pytest.ini
api/apps/: admin.py  api.py  constants.py  exceptions.py  models.py  services.py  utils.py
api/apps/api/: __init__.py  schemas.py  setting.py  subtitle.py  video.py
api/apps/migrations/: 0001_initial.py  0002_settings.py  0003_youtubevideo_audio.py  0004_alter_settings_options_alter_youtubevideo_options_and_more.py  0005_subtitle.py  0006_alter_subtitle_language.py  0007_alter_subtitle_unique_together.py
api/apps/services/: subtitle_service.py  video_service.py
api/tests/: conftest.py  test_models.py
api/tests/api/: test_setting.py  test_subtitle.py  test_video.py
api/tests/services/: test_subtitle_service.py  test_video_service.py
api/wandlung/: asgi.py  settings.py  settings_test.py  storages.py  urls.py  wsgi.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/layout/: HeaderMenu.tsx  MainLayout.tsx  SideMenu.tsx
ui/src/pages/setting/: SettingsPage.tsx
ui/src/pages/subtitle/: EditSubtitleDrawer.tsx  SubtitlesPage.tsx  TranscribeVideoModal.tsx  TranslateSubtitleModal.tsx  VideoPlayerModal.tsx
ui/src/pages/video/: AddVideoModal.tsx  VideosPage.tsx
